--- a/views/pages/explorer/singlePagePostView.ejs
+++ b/views/pages/explorer/singlePagePostView.ejs
@@ -35,44 +35,42 @@
                                 <section>
                                     <%- post.body %>
                                 </section>
-                                <section>
+                                <section class="mt-5">
                                     <% if(!user) { %>
-                                        <!-- <button class="btn btn-success btn-sm" disabled> -->
-                                        <span>
-                                            <i class="far fa-thumbs-up disabled"></i> (<%= post.likes.length %> )
-                                        </span>
-                                        <!-- </button> -->
-                                        <!-- <button class="btn btn-danger btn-sm" disabled> -->
-                                        <span>
-                                            <i class="far fa-thumbs-down disabled"></i> (<%= post.dislikes.length %> )
-                                        </span>
-                                        <!-- </button> -->
-                                        <p class="text-center text-muted">
-                                            To like and comment please <a href="/auth/login">Login</a>
+                                        <button class="btn btn-primary btn-sm" disabled>
+                                            <i class="far fa-thumbs-up"></i> (<%= post.likes.length %> )
+                                        </button>
+                                        <button class="btn btn-danger btn-sm" disabled>
+                                            <i class="far fa-thumbs-down"></i> (<%= post.dislikes.length %> )
+                                        </button>
+                                        <p class="text-center text-muted mt-4">
+                                            To like, comment and bookmark please <a href="/auth/login">Login</a>
                                         </p>
                                         <% } else { %>
-                                            <span id="likeBtn" data-post="<%= post._id %> ">
+                                            <button class="btn btn-primary btn-sm" id="likeBtn"
+                                                data-post="<%= post._id %>">
                                                 <% if(post.likes.includes(user._id)) { %>
                                                     <i class="fas fa-thumbs-up"></i>
                                                     <% } else { %>
                                                         <i class="far fa-thumbs-up"></i>
                                                         <% } %>
                                                             (<%= post.likes.length %> )
-                                            </span>
-                                            <span id="dislikeBtn" data-post="<%= post._id %> ">
+                                            </button>
+                                            <button class="btn btn-danger btn-sm" id="dislikeBtn"
+                                                data-post="<%= post._id %>">
                                                 <% if(post.dislikes.includes(user._id)) { %>
                                                     <i class="fas fa-thumbs-down"></i>
                                                     <% } else { %>
                                                         <i class="far fa-thumbs-down"></i>
                                                         <% } %>
                                                             (<%= post.dislikes.length %> )
-                                            </span>
-                                            <div class="mt-5">
+                                            </button>
+                                            <div class="mt-3">
                                                 <label for="comment">Leave a comment</label>
                                                 <input type="text" class="form-control" id="comment"
                                                     placeholder="Press enter to submit" data-post="<%= post._id %> ">
                                             </div>
-                                            <div class="mt-5" id="comment-holder">
+                                            <div class="mt-3" id="comment-holder">
                                                 <% if(post.comments.length===0) { %>
                                                     <p class="text-muted text-center">There is no comment</p>
                                                     <% } else { %>
