--- a/views/pages/explorer/singlePagePostView.ejs
+++ b/views/pages/explorer/singlePagePostView.ejs
@@ -54,7 +54,7 @@
                                                     <% } else { %>
                                                         <i class="far fa-thumbs-up"></i>
                                                         <% } %>
-                                                            (<%= post.likes.length %> )
+                                                            (<%= post.likes.length %>)
                                             </button>
                                             <button class="btn btn-danger btn-sm" id="dislikeBtn"
                                                 data-post="<%= post._id %>">
@@ -63,7 +63,7 @@
                                                     <% } else { %>
                                                         <i class="far fa-thumbs-down"></i>
                                                         <% } %>
-                                                            (<%= post.dislikes.length %> )
+                                                            (<%= post.dislikes.length %>)
                                             </button>
                                             <div class="mt-3">
                                                 <label for="comment">Leave a comment</label>
@@ -123,6 +123,7 @@
         <%- include('../../partials/bootstrapCdnJs.ejs') %>
 
             <script src="/scripts/bookmarks.js"></script>
+            <script src="/scripts/likeDislike.js"></script>
 
 
             </body>
